correction alignement boutons

--- a/src/css/layout/compo.css
+++ b/src/css/layout/compo.css
@@ -17,7 +17,7 @@
 
 /* bouton */
 .alignementbouton {
-    display: flex;
+
     vertical-align: middle;
 }
 
@@ -95,13 +95,13 @@ input:invalid {
 @keyframes shake {
     25% {
         transform: translateX(4px)
-    }
+    };
 
     50% {
         transform: translateX(-4px)
-    }
+    };
 
     75% {
         transform: translateX(4px)
-    }
+    };
 }
